# agent-procs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  cliff.toml
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
HomebrewFormula/: agent-procs.rb
benches/: benchmarks.rs
docs/superpowers/plans/: 2026-03-15-agent-procs-v2.md  2026-03-15-agent-procs-v3.md  2026-03-15-agent-procs.md  2026-03-16-reverse-proxy.md  2026-03-17-v0.6-restart-watch-filter.md  2026-03-18-v0.7-log-search.md
docs/superpowers/specs/: 2026-03-15-agent-procs-design.md  2026-03-15-agent-procs-v2-design.md  2026-03-15-agent-procs-v3-design.md  2026-03-16-reverse-proxy-design.md  2026-03-17-v0.6-design.md  2026-03-18-v0.7-log-search-design.md
skill/: SKILL.md  agent-procs.md
skill/agent-procs-workspace/: grade.py  trigger-eval.json
skill/agent-procs-workspace/iteration-1/: benchmark.json  benchmark.md
skill/agent-procs-workspace/iteration-1/background-server-testing/: eval_metadata.json
skill/agent-procs-workspace/iteration-1/background-server-testing/with_skill/: grading.json  timing.json
skill/agent-procs-workspace/iteration-1/background-server-testing/with_skill/outputs/: commands.sh
skill/agent-procs-workspace/iteration-1/background-server-testing/without_skill/: grading.json  timing.json
skill/agent-procs-workspace/iteration-1/background-server-testing/without_skill/outputs/: commands.sh
skill/agent-procs-workspace/iteration-1/full-stack-config/: eval_metadata.json
skill/agent-procs-workspace/iteration-1/full-stack-config/with_skill/: grading.json  timing.json
skill/agent-procs-workspace/iteration-1/full-stack-config/with_skill/outputs/: commands.sh
skill/agent-procs-workspace/iteration-1/full-stack-config/without_skill/: grading.json  timing.json
skill/agent-procs-workspace/iteration-1/full-stack-config/without_skill/outputs/: agent-procs.yaml  commands.sh
skill/agent-procs-workspace/iteration-1/microservices-topology/: eval_metadata.json
skill/agent-procs-workspace/iteration-1/microservices-topology/with_skill/: grading.json  timing.json
skill/agent-procs-workspace/iteration-1/microservices-topology/with_skill/outputs/: agent-procs.yaml  commands.sh
skill/agent-procs-workspace/iteration-1/microservices-topology/without_skill/: grading.json  timing.json
skill/agent-procs-workspace/iteration-1/microservices-topology/without_skill/outputs/: agent-procs.yaml  commands.sh
skill/evals/: evals.json
src/: config.rs  disk_log_reader.rs  error.rs  lib.rs  main.rs  paths.rs  protocol.rs  session.rs
src/cli/: down.rs  log_search.rs  logs.rs  mod.rs  restart.rs  run.rs  session_cmd.rs  status.rs  stop.rs  up.rs  wait.rs
src/daemon/: actor.rs  log_index.rs  log_writer.rs  mod.rs  port_allocator.rs  process_manager.rs  proxy.rs  server.rs  spawn.rs  wait_engine.rs  watcher.rs
src/tui/: app.rs  disk_log_reader.rs  event_loop.rs  input.rs  mod.rs  ui.rs
tests/: proptest_tests.rs  test_config.rs  test_e2e.rs  test_follow.rs  test_log_search.rs  test_logs.rs  test_paths.rs  test_port_assignment.rs  test_process_groups.rs  test_protocol.rs  test_proxy.rs  test_restart.rs  test_run_stop.rs  test_session.rs  test_session_mgmt.rs  test_tui_app.rs  test_tui_smoke.rs  test_up_down.rs  test_wait.rs
tests/helpers/: mod.rs
