[package]
name = "agent-procs"
version = "0.2.0"
edition = "2021"
description = "Concurrent process runner for AI agents"
license = "MIT"
repository = "https://github.com/jkhoffman/agent-procs"

[[bin]]
name = "agent-procs"
path = "src/main.rs"

[lib]
name = "agent_procs"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
nix = { version = "0.29", features = ["signal", "process", "user"] }
thiserror = "2"
regex = "1"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
