[package]
name = "agent-procs"
version = "0.5.1"
edition = "2024"
rust-version = "1.88"
description = "Concurrent process runner for AI agents"
license = "MIT"
repository = "https://github.com/jkhoffman/agent-procs"

[[bin]]
name = "agent-procs"
path = "src/main.rs"

[lib]
name = "agent_procs"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
nix = { version = "0.29", features = ["signal", "process", "user"] }
thiserror = "2"
regex = "1"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "server", "client-legacy"] }
http = "1"
http-body-util = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
ansi-to-tui = "7.0.0"
notify = "7"
globset = "0.4"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "benchmarks"
harness = false

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
wildcard_imports = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
uninlined_format_args = "allow"
too_many_lines = "allow"
single_match_else = "allow"
manual_let_else = "allow"
items_after_statements = "allow"
cast_possible_wrap = "allow"
